--- a/public/members.html
+++ b/public/members.html
@@ -9,7 +9,7 @@
   <link type="text/css" rel="stylesheet" href="css/styles.css">
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js" ></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,93 +27,93 @@
           <li><a class="headerText" href="#instagram">Photos</a></li>
           <!-- <li><a class="headerText" href="#after">Nearby</a></li> -->
           <li><a class="headerText" href="#donate">Donate</a></li>
-          <li><a class="headerText" href="#blog">Blog</a></li>
         </ul>
-        <div class="progress">
+        <!-- <div class="progress">
           <div class="determinate" style="width: 70%"></div>
-        </div>
+        </div> -->
       </div>
     </nav>
   </div>
 
   <div class="wrapper" id="mainContainer">
 
-      <div class="one">
-        <h1 class=" white-text" id="mainHeaderText">Hello, Bat Lover.</h1>
-      </div>
-      <div class="three">
-        <img class="batLogo" src="images/batsATXLogo.png" alt="">
-      </div>
-      <div class="four">
-        <h4 class="center-align white-text" id="headerSubText">Find out when and where to see the fameous bats in Austin, TX </h4>
-      </div>
-      <div class="six ">
-        <a class="waves-effect waves-light btn introButton z-depth-5" href="#joinTarget">Join</a>
-      </div>
-      <div class="two">
-        <canvas id="canvas1"></canvas>
-      </div>
-
+    <div class="one">
+      <h1 class=" white-text" id="mainHeaderText">Hello, Bat Lover.</h1>
+    </div>
+    <div class="three">
+      <img class="batLogo" src="images/batsATXLogo.png" alt="">
+    </div>
+    <div class="four">
+      <h4 class="center-align white-text" id="headerSubText">Find out when and where to see the fameous bats in Austin, TX </h4>
+    </div>
+    <div class="six ">
+      <a class="waves-effect waves-light btn introButton z-depth-5" href="#joinTarget">Join</a>
+    </div>
+    <div class="two">
+      <canvas id="canvas1"></canvas>
     </div>
 
+  </div>
 
-    <div class="container weatherBox section scrollspy " id="weather">
-      <div class="z-depth-5 center orange weatherSubBox">
-        <div class="row">
+
+  <div class="container weatherBox section scrollspy " id="weather">
+    <div class="z-depth-5 center orange weatherSubBox">
+      <div class="row">
         <div class="col s12 m12 center">
-        <h3 class="center orange white-text" id="weatherHeader">Forecast</h3>
+          <h3 class="center orange white-text" id="weatherHeader">Forecast</h3>
         </div>
         <div class="col s12 m4 push-m4">
-        <div class="teal" id = "subtract">
-          <p class="center white-text" id="todaysFlight">We are not experts, but experts say to arrive at least 45 minutes before sunset. Arive by: <h3 class="arriveEarly center red-text"> </h3></p>
+          <div class="teal" id="subtract">
+            <h5 class="center white-text" id="todaysFlight">We are not experts, but experts say to arrive at least 45 minutes before sunset.</h5>
+            <h3 class="arriveEarly center red-text"> </h3>
+          </div>
+        </div>
+        <br>
+        <div class="col s12 m12">
+          <h5 class="center white-text">Weather</h5>
+          <div class=" teal weatherTable">
+            <table class="centered white-text">
+              <thead>
+                <tr>
+                  <th>Today</th>
+                  <th>tomorrow</th>
+                  <th>Two Days from now</th>
+                </tr>
+              </thead>
+
+              <tbody id="tempBody">
+                <tr>
+                  <td id="todayInfo"></td>
+                  <td id="tomorrowInfo"></td>
+                  <td id="twoDayInfo"></td>
+                </tr>
+                <tr>
+                  <td id="todayInfo2"></td>
+                  <td id="tomorrowInfo2"></td>
+                  <td id="twoDayInfo2"></td>
+                </tr>
+                <tr>
+                  <td id="todayInfo3"></td>
+                  <td id="tomorrowInfo3"></td>
+                  <td id="twoDayInfo3"></td>
+                </tr>
+
+                <tr>
+                  <td id="todayInfo4"></td>
+                  <td id="tomorrowInfo4"></td>
+                  <td id="twoDayInfo4"></td>
+                </tr>
+                <tr>
+                  <td class="summary" id="todayInfo5"></td>
+                  <td class="summary" id="tomorrowInfo5"></td>
+                  <td class="summary" id="twoDayInfo5"></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
-      <br>
-      <div class="col s12 m12">
-        <h5 class="center white-text">Weather</h5>
-      <div class=" teal weatherTable">
-        <table class="centered white-text">
-          <thead>
-            <tr>
-              <th>Today</th>
-              <th>tomorrow</th>
-              <th>Two Days from now</th>
-            </tr>
-          </thead>
-
-          <tbody id="tempBody">
-            <tr>
-              <td id="todayInfo"></td>
-              <td id="tomorrowInfo"></td>
-              <td id="twoDayInfo"></td>
-            </tr>
-            <tr>
-              <td id="todayInfo2"></td>
-              <td id="tomorrowInfo2"></td>
-              <td id="twoDayInfo2"></td>
-            </tr>
-            <tr>
-              <td id="todayInfo3"></td>
-              <td id="tomorrowInfo3"></td>
-              <td id="twoDayInfo3"></td>
-            </tr>
-
-            <tr>
-              <td id="todayInfo4"></td>
-              <td id="tomorrowInfo4"></td>
-              <td id="twoDayInfo4"></td>
-            </tr>
-            <tr>
-              <td class="summary" id="todayInfo5"></td>
-              <td class="summary" id="tomorrowInfo5"></td>
-              <td class="summary" id="twoDayInfo5"></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
     </div>
-  </div>
-</div>
   </div>
 
   <div class="container z-depth-5 section scrollspy infoContainer" id="about">
@@ -125,137 +125,131 @@
           </h5>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6892.021786437301!2d-97.75063147440693!3d30.265270827209868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5064fff0741%3A0xc70811548b9aecff!2sCongress+Avenue+Bridge!5e0!3m2!1sen!2sus!4v1502498894240"
             width="auto" height="auto" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <br>
-            <h5 class="white-text left-align"><strong>Parking Information</strong></h5>
-            <p class="white-text parkingText">Parking Information: We reccomend parking at the Austin American Statesman. Pay for parking using the parking lot app (www.parkmobile.com). Entering parking zone number 2101 to pay for a space.</p>
-</div>
+          <br>
+          <h5 class="white-text left-align"><strong>Parking Information</strong></h5>
+          <p class="white-text parkingText">Parking Information: We reccomend parking at the Austin American Statesman. Pay for parking using the parking lot app (www.parkmobile.com). Entering parking zone number 2101 to pay for a space.</p>
+        </div>
       </div>
       <div class="col s12 m6">
         <div class="card-panel small teal viewingCards">
-        <h5 class="white-text">About the Bats</h5>
-        <p class="white-text parkingText">Austin's bridge bats are Mexican free-tailed bats. They migrate each spring from central Mexico to various roosting sites throughout the southwestern U.S. Most of the colony is female, and in early June each one gives birth to a single baby bat, called a pup.</p>
-
-        <h5 class="white-text">Viewing Times</h5>
-        <p class="white-text parkingText">This initial wave flies out right before sunset, and it can take 2-3 hours for all of the bats to come out. We suggest you get there a little early. Use our sunset information to plan ahead. <br><br>The best time of the year to see the bats is during the summer. They wll still fly everynight but by early November they have migrated and won't be back until spring.</p>
+          <h5 class="white-text">About the Bats</h5>
+          <p class="white-text parkingText">Austin's bridge bats are Mexican free-tailed bats. They migrate each spring from central Mexico to various roosting sites throughout the southwestern U.S. Most of the colony is female, and in early June each one gives birth to a single baby
+            bat, called a pup.</p>
+          <h5 class="white-text">Viewing Times</h5>
+          <p class="white-text parkingText">This initial wave flies out right before sunset, and it can take 2-3 hours for all of the bats to come out. We suggest you get there a little early. Use our sunset information to plan ahead. <br><br>The best time of the year to see the bats
+            is during the summer. They will still fly everynight but by early November they have migrated and won't be back until spring.</p>
         </div>
-
       </div>
     </div>
   </div>
-]    <div class="container shopContainer section scrollspy valign-wrapper" id="shop">
-      <div class="row products2">
-        <div class="col s12 m12">
+
+  <div class="container shopContainer section scrollspy valign-wrapper" id="shop">
+    <div class="row products2">
+      <div class="col s12 m12">
         <h3 class="center white-text">Help Us Pay Rent!</h3>
       </div>
-        <div class="products" id="target">
-          <!--
-          <div class="col s6 m3">
-            <div class="card z-depth-5 hoverable">
-              <div class="card-image">
-                <img class="shopImage" src="images/shirt.jpg">
-              </div>
-              <div class="card-content">
-                <h6>Womens Bat Shirt</h6>
-                <p>Price: $20.00</p>
-              </div>
-              <div class="card-action">
-                <button class="snipcart-add-item" data-item-id="4" data-item-name="Bat Shirt" data-item-price="20.00" data-item-custom2-name="Size" data-item-custom2-options="Small|Medium|Large" data-item-url="http://myapp.com/products/bacon" data-item-description="T-Shirt With Bats On It">
-        Buy
-</button>
-              </div>
-            </div>
-          </div> -->
+      <div class="products" id="target">
       </div>
+      <div class="snipcart-summary center black-text">
+        Number of items: <span class="snipcart-total-items"></span> Total price: <span class="snipcart-total-price"></span>
+      </div>
+      <br>
+      <div class="snipcart-summary">
+        <div class="cartCheckout center">
+          <a href="#" class="snipcart-checkout waves-effect waves-light btn introButton z-depth-5">checkout</a>
+        </div>
+</div>
     </div>
   </div>
 
-    <div class="container z-depth-5 instagramContainer teal section scrollspy" id="instagram">
+  <div class="container z-depth-5 instagramContainer teal section scrollspy" id="instagram">
+    <div class="row">
+      <div class="col s12 m12">
+        <h3 class="center white-text">#batsATX of Instagram</h3>
+        <div class="carousel">
+          <a class="carousel-item" href="#one!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#two!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#three!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#four!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#five!"><img src="images/batinsta.jpg"></a>
+        </div>
+        <h5 class="center white-text">Share your phots on Instagram with #batsatx</h5>
+      </div>
+    </div>
+  </div>
+  <div class="card-panel z-depth-5 orange donationPannel valign-wrapper">
+
+    <div class="conservationImage center section scrollspy" id="donate">
       <div class="row">
+        <h3 class="white-text">Donate</h3>
         <div class="col s12 m12">
-          <h3 class="center white-text">#batsATX of Instagram</h3>
-          <div class="carousel">
-            <a class="carousel-item" href="#one!"><img src="images/batinsta.jpg"></a>
-            <a class="carousel-item" href="#two!"><img src="images/batinsta.jpg"></a>
-            <a class="carousel-item" href="#three!"><img src="images/batinsta.jpg"></a>
-            <a class="carousel-item" href="#four!"><img src="images/batinsta.jpg"></a>
-            <a class="carousel-item" href="#five!"><img src="images/batinsta.jpg"></a>
-          </div>
-          <h5 class="center white-text">Share your phots on Instagram with #batsatx</h5>
+          <img class="responsive-img" id="batOrgImage" src="images/batcharity1.png" alt="donatImage">
         </div>
-      </div>
-    </div>
-    <div class="card-panel z-depth-5 orange donationPannel valign-wrapper">
-
-      <div class="conservationImage center section scrollspy" id="donate">
-        <div class="row">
-          <h3 class="white-text">Donate</h3>
-          <div class="col s12 m12">
-            <img class="responsive-img" id="batOrgImage" src="images/batcharity1.png" alt="donatImage">
-          </div>
-          <h5 class="white-text center">"The mission of Bat Conservation International is to conserve the world’s bats and their ecosystems to ensure a healthy planet."</h5>
-          <br>
-          <a class="waves-effect waves-light btn-large hoverabel center" id="donateButton" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056
+        <h5 class="white-text center">"The mission of Bat Conservation International is to conserve the world’s bats and their ecosystems to ensure a healthy planet."</h5>
+        <br>
+        <a class="waves-effect waves-light btn-large hoverabel center" id="donateButton" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056
 ">Donate Now</a>
-          <p class="white-text center">BCI is dedicated to the enduring protection of the world’s 1300+ species of bats and their habitats and creating a world in which bats and humans successfully coexist. In pursuit of this vision, during the next five years BCI will work worldwide
-            at scale with local, regional, national and multinational public and private partners to respond rapidly and effectively to bat conservation crises, preventing the extinction of threatened bats and the extirpation of globally significant populations
-            of bats
-          </p>
-          <br>
-          <br>
+        <p class="white-text center">BCI is dedicated to the enduring protection of the world’s 1300+ species of bats and their habitats and creating a world in which bats and humans successfully coexist. In pursuit of this vision, during the next five years BCI will work worldwide
+          at scale with local, regional, national and multinational public and private partners to respond rapidly and effectively to bat conservation crises, preventing the extinction of threatened bats and the extirpation of globally significant populations
+          of bats
+        </p>
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <div class="joinBox section scrollspy" id="joinTarget">
+
+  </div>
+
+
+  <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <a class="grey-text text-lighten-4" target="_blank" href="https://www.instagram.com/explore/tags/batsatx/?hl=en"><h5>#batsATX</h5></a>
+          <img class="batLogo2" src="images/batsATXLogo.png" alt="">
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text"></h5>
+          <ul class="right hide-on-med-and-down">
+            <li><a class="grey-text text-lighten-4" href="">Home</a></li>
+            <li><a class="grey-text text-lighten-4" href="#shop">Shop</a></li>
+            <li><a class="grey-text text-lighten-4" href="#weather">See the bats</a></li>
+            <li><a class="grey-text text-lighten-4" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056">Donate</a></li>
+          </ul>
         </div>
       </div>
     </div>
-    <div class="joinBox section scrollspy" id="joinTarget">
-
-    </div>
-
-
-    <footer class="page-footer orange">
+    <div class="footer-copyright">
       <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">#batsATX</h5>
-            <p class="grey-text text-lighten-4"></p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text"></h5>
-            <ul class="right hide-on-med-and-down">
-              <li><a class="grey-text text-lighten-4" href="">Home</a></li>
-              <li><a class="grey-text text-lighten-4" href="#shop">Shop</a></li>
-              <li><a class="grey-text text-lighten-4" href="#weather">See the bats</a></li>
-            </ul>
-          </div>
-        </div>
+        © 2017 Copyright
+        <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056">Donate</a>
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-          © 2017 Copyright
-          <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056">Donate</a>
-        </div>
-      </div>
-    </footer>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/members.js"></script>
-    <script type="text/javascript" src="js/annimation.js"></script>
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="NDdhYTA5NTMtNzkwZi00ZGMyLWJmYjctOTY3NjllZjE5ZWNmNjM2Mzg0Mjc2Nzk2MjgwODI2"></script>
+    </div>
+  </footer>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
+  <script type="text/javascript" src="js/annimation.js"></script>
+  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-autopop="false" data-api-key="NDdhYTA5NTMtNzkwZi00ZGMyLWJmYjctOTY3NjllZjE5ZWNmNjM2Mzg0Mjc2Nzk2MjgwODI2"></script>
 
-    <script>
-      $(".button-collapse").sideNav();
+  <script>
+    $(".button-collapse").sideNav();
 
-      $(document).ready(function() {
-        $('.carousel').carousel();
-      });
-      $(document).ready(function() {
-        $('.scrollspy').scrollSpy();
-      });
-      $('.tap-target').tapTarget('open');
-  $('.tap-target').tapTarget('close');
+    $(document).ready(function() {
+      $('.carousel').carousel();
+    });
+    $(document).ready(function() {
+      $('.scrollspy').scrollSpy();
+    });
+    $('.tap-target').tapTarget('open');
+    $('.tap-target').tapTarget('close');
 
-  Snipcart.subscribe('order.completed', function (data) {
+    Snipcart.subscribe('order.completed', function(data) {
       console.log(data);
-  });
-    </script>
+    });
+  </script>
 </body>
 
 </html>
